Small fixes to cookie consent mobile variant spacings

--- a/packages/react/src/components/cookieConsent/CookieConsent.module.scss
+++ b/packages/react/src/components/cookieConsent/CookieConsent.module.scss
@@ -43,7 +43,7 @@
 
 .content {
   position: relative;
-  padding: var(--common-spacing) var(--common-spacing) 0 var(--common-spacing);
+  padding-top: var(--common-spacing);
   background: #ffffff;
   width: 100%;
   box-sizing: border-box;
@@ -80,7 +80,7 @@
 }
 
 .text-content > p {
-  padding-bottom: var(--spacing-2-xl);
+  padding-bottom: var(--spacing-l);
 }
 
 .main-content {
@@ -149,7 +149,7 @@
 
 .consent-group-parent {
   display: flex;
-  padding-bottom: var(--spacing-m);
+  padding-bottom: var(--spacing-l);
   flex-direction: column;
   > p {
     margin-bottom: 0;
@@ -160,7 +160,7 @@
   display: flex;
   position: relative;
   padding: var(--spacing-m) 0;
-  margin-left: var(--spacing-xs);
+  margin-left: 0;
   flex-direction: column;
   border-bottom: 1px solid var(--color-black);
 }
@@ -170,7 +170,7 @@
   padding: 0;
   flex-direction: column;
   p {
-    padding: var(--spacing-l) 0 0;
+    padding: var(--spacing-m) 0 0;
     margin: 0;
   }
   button {
@@ -254,6 +254,10 @@
     padding-top: 0;
   }
 
+  .text-content > p {
+    padding-bottom: var(--spacing-2-xl);
+  }
+
   .content .emulated-h1 {
     margin-right: 200px;
   }
@@ -269,6 +273,9 @@
 
   .consent-group-content {
     padding: 0 var(--spacing-l);
+    p {
+      padding: var(--spacing-l) 0 0;
+    }
   }
 
   .buttons {
